2005-05-31  Tim Golden  <mail@timgolden.me.uk>

        * src/pydo/drivers/mssqlconn.py: more precise handling of
        identity / sequence detection (only consider something as
        a sequence if it is not null, an identity and a primary key).
        Also correct a type which had the wrong sql executed when
        looking for unique constraints.

2005-05-31  Jacob Smullyan  <smulloni@bunbury.smullyan.org>

	* src/pydo/base.py (PyDO._update_raw): *partial* fix for bug found
	by Hamish Lawson -- the accumulation of bind variables is broken
	for parastyles that store values in a dictionary.  This fix is for
	_update_raw, but there more methods to be repaired.

	* doc/manual.rst: document the refinement in null treatment in
	fetch. 

	* src/pydo/multifetch.py (iterfetch): add a little intelligence
	about whether to map an object with all null values to None. 

	* src/pydo/base.py (arrayfetch): note in docstring that this
	function is deprecated.

	* src/pydo/joins.py: note in docstring that this module is
	deprecated. 

	* src/pydo/operators.py: removed redundancy in docstring.

	* doc/examples/pim.py: changed import here as well.

	* doc/api/Makefile (EPYDOC): change for package name.

	* doc/manual.rst: change package name, and name of fetch
	function. 

	* src/pydo/multifetch.py: renamed module again, and renamed
	scatterfetch back to fetch.  src/pydo/__init__.py: changed import
	from fetch to multifetch.

	* setup.py, tests, src/pydo: renamed package again, from PyDO2 to pydo.  
	
2005-05-30  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/fetch.py: renaming fetch to scatterfetch (fetch
	conflicts with module name); stopped flattening the resultSpec.

	* doc/manual.rst: documenting scatterfetch.

2005-05-29  Jacob Smullyan  <smulloni@smullyan.org>

	* src/PyDO2/fetch.py (iterfetch): add the columns to the column
	list in sorted order, so that if you don't use $COLUMNS you can at
	least predict what the right order is.
